Fixes visual grid on small screens

--- a/public/css/_variables.scss
+++ b/public/css/_variables.scss
@@ -14,7 +14,7 @@ $visual-grid: true;
 $visual-grid-color: tomato;
 $column: modular-scale($base-font-size, 10, $base-ratio);
 $gutter: modular-scale($base-font-size, 1, $base-ratio);
-$grid-columns: 3;
+$grid-columns: 4;
 $max-width: 75em;
 
 
